[A] - added dark mode implementation to index

--- a/assign1/index.html
+++ b/assign1/index.html
@@ -32,11 +32,9 @@
                 is a file format which originates from Portable Network Graphics (.PNG) 
                 but allows animated images that work similarly to animated .GIF files.
                 By exploring this website you learn more about the .APNG file type and how 
-                its used.
+                it's used.
             </p>
-            <div id="learn-more">
-                <a href="topic.html">Learn more</a>
-            </div>
+            <a href="./topic.html" id="learn-more">Learn more</a>
         </main>
         <footer>
             <a href="#studentid_name1">103936755 - Jacky Yao</a>
