--- a/assign1/quiz.html
+++ b/assign1/quiz.html
@@ -183,14 +183,11 @@
 
 		<!-- Footer -->
 		<footer>
-			<hr/>
-			<a>
-				Jacky Yao 103936755
-				Jack Davies 103622407
-				Thien An Ly 103499753
-				Ravish Randev Kulathanthilage 103800614
-				Jian Jia Ng 103840759
-			</a>
+			<a href="#studentid_name1">103936755 - Jacky Yao</a>
+            <a href="#studentid_name2">103622407 - Jack Davies</a>
+            <a href="#studentid_name3">103499753 - Thien An Ly</a>
+            <a href="#studentid_name4">103800614 - Ravish Randev Kulathanthilage</a>
+            <a href="#studentid_name5">103840759 - Jian Jia Ng</a>
 		</footer>
 
 	</body>
