[A] - added some more css
parallax background and darkmode shaders for topic.html, basic shuffling animations for quiz.html

--- a/assign1/index.html
+++ b/assign1/index.html
@@ -26,8 +26,8 @@
 			</nav>
 		</header>
         <main id="bg-container">
-            <h1>Animated Portable Network Graphics</h1>
-            <p>
+            <h1 id="title">Animated Portable Network Graphics</h1>
+            <p id="subtitle">
                 Animated Portable Network Graphics or .APNG for short
                 is a file format which originates from Portable Network Graphics (.PNG) 
                 but allows animated images that work similarly to animated .GIF files.
