--- a/assign1/quiz.html
+++ b/assign1/quiz.html
@@ -35,28 +35,13 @@
 		
 		<main id="container">
 
-			<!-- Parallax scrolling images -->
-			<aside id="parallax-sublayer">
-				<section class="parallax img1">
-					<p>A parallax image</p>
-				</section>
-
-				<section class="parallax img2">
-					<p>A parallax image</p>
-				</section>
-				
-				<section class="parallax img3">
-					<p>A parallax image</p>
-				</section>
-			</aside>
-
 			<form action="https://mercury.swin.edu.au/it000000/formtest.php" method="POST">
 				
 				<!-- Paste finished menu/navbar here -->
 				<!-- Paste finished header here -->
 
-				<h1>Quiz time!</h1>
-				<h2>Test your knowledge by filling out these reinforcement questions!</h2>
+				<h1 id="title">Quiz time!</h1>
+				<h2 id="subtitle">Test your knowledge by filling out these reinforcement questions!</h2>
 
 				<!-- Info -->
 				<fieldset class="bubble" id="info">
@@ -80,7 +65,7 @@
 				</fieldset>
 
 				<!-- Text input question -->
-				<fieldset class="bubble">
+				<fieldset class="bubble" id="bubble1">
 					<div class="question">
 						<legend>Question 1</legend>
 						<div class="content">
@@ -93,7 +78,7 @@
 				</fieldset>
 
 				<!-- Radio choice question -->
-				<fieldset class="bubble">
+				<fieldset class="bubble" id="bubble2">
 					<div class="question">
 						<legend>Question 2</legend>
 						<div class="content">
@@ -118,7 +103,7 @@
 				</fieldset>
 
 				<!-- Checkbox question -->
-				<fieldset class="bubble">
+				<fieldset class="bubble" id="bubble3">
 					<div class="question">
 						<legend>Question 3</legend>
 						<div class="content">
@@ -143,7 +128,7 @@
 				</fieldset>
 
 				<!-- Drop-down question -->
-				<fieldset class="bubble">
+				<fieldset class="bubble" id="bubble4">
 					<div class="question">
 						<legend>Question 4</legend>
 						<div class="content">
@@ -161,7 +146,7 @@
 				</fieldset>
 
 				<!-- Text area question -->
-				<fieldset class="bubble">
+				<fieldset class="bubble" id="bubble5">
 					<div class="question">
 						<legend>Question 5</legend>
 						<div class="content">
