--- a/assign1/index.html
+++ b/assign1/index.html
@@ -34,7 +34,7 @@
                 By exploring this website you learn more about the .APNG file type and how 
                 it's used.
             </p>
-            <a href="./topic.html" id="learn-more">Learn more</a>
+            <a href="topic.html" id="learn-more">Learn more</a>
         </main>
         <footer>
             <a href="#studentid_name1">103936755 - Jacky Yao</a>
