--- a/assign1/quiz.html
+++ b/assign1/quiz.html
@@ -25,10 +25,10 @@
 						<label for="toggleMode" id="toggleDark">Dark Mode</label>
 						<label for="toggleMode" id="toggleLight">Light Mode</label>
 					</li>
-					<li><a href="enhancements.html">Enhancements</a></li>
-                    <li><a href="quiz.html">Quiz</a></li>
-                    <li><a href="topic.html">Topic</a></li>
-                    <li><a href="index.html">Home</a></li>
+					<li><a href="enhancements.html" target="_blank">Enhancements</a></li>
+                    <li><a href="quiz.html" target="_blank">Quiz</a></li>
+                    <li><a href="topic.html" target="_blank">Topic</a></li>
+                    <li><a href="index.html" target="_blank">Home</a></li>
 				</ul>
 			</nav>
 		</header>
@@ -164,13 +164,13 @@
 		</main>	
 
 		<!-- Footer -->
-		<footer>
-			<a href="#studentid_name1">103936755 - Jacky Yao</a>
-            <a href="#studentid_name2">103622407 - Jack Davies</a>
-            <a href="#studentid_name3">103499753 - Thien An Ly</a>
-            <a href="#studentid_name4">103800614 - Ravish Randev Kulathanthilage</a>
-            <a href="#studentid_name5">103840759 - Jian Jia Ng</a>
-		</footer>
+        <footer>
+            <a href="mailto:103936755@student.swin.edu.au" target="_blank">103936755 - Jacky Yao</a>
+            <a href="mailto:103622407@student.swin.edu.au" target="_blank">103622407 - Jack Davies</a>
+            <a href="mailto:103499753@student.swin.edu.au" target="_blank">103499753 - Thien An Ly</a>
+            <a href="mailto:103800614@student.swin.edu.au" target="_blank">103800614 - Ravish Randev Kulathanthilage</a>
+            <a href="mailto:103840759@student.swin.edu.au" target="_blank">103840759 - Jian Jia Ng</a>
+        </footer>
 
 	</body>
 	
