[C] - changed animations on quiz.html
interactive expand when hover instead of shuffling back/forth, added reference for enhancements.html, changed footer to match requirements, replaced darkmode toggler with icons

--- a/assign1/topic.html
+++ b/assign1/topic.html
@@ -8,6 +8,7 @@
 		<meta name="viewport" content="width=device-width" initial-scale="1">
 		<title>APNG topic</title>
 		<link href="styles/style.css" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	</head>
 
 	<body>
@@ -16,8 +17,8 @@
 			<nav>
 				<ul>
 					<li id="toggler">
-						<label for="toggleMode" id="toggleDark">Dark Mode</label>
-						<label for="toggleMode" id="toggleLight">Light Mode</label>
+						<label for="toggleMode" id="toggleDark"><span class="material-icons md-32">toggle_off</span><span class="material-icons md-32">dark_mode</span></label>
+						<label for="toggleMode" id="toggleLight"><span class="material-icons md-32">toggle_on</span><span class="material-icons md-32">light_mode</span></label>
 					</li>
 					<li><a href="enhancements.html" target="_blank">Enhancements</a></li>
                     <li><a href="quiz.html" target="_blank">Quiz</a></li>
