--- a/assign1/enhancements.html
+++ b/assign1/enhancements.html
@@ -8,6 +8,7 @@
 		<meta name="viewport" content="width=device-width" initial-scale="1">
 		<title>APNG enhancements</title>
 		<link href="styles/style.css" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	</head>
 
 	<body>
@@ -16,8 +17,8 @@
 			<nav>
 				<ul>
 					<li id="toggler">
-						<label for="toggleMode" id="toggleDark">Dark Mode</label>
-						<label for="toggleMode" id="toggleLight">Light Mode</label>
+						<label for="toggleMode" id="toggleDark"><span class="material-icons md-32">toggle_off</span><span class="material-icons md-32">dark_mode</span></label>
+						<label for="toggleMode" id="toggleLight"><span class="material-icons md-32">toggle_on</span><span class="material-icons md-32">light_mode</span></label>
 					</li>
 					<li><a href="enhancements.html" target="_blank">Enhancements</a></li>
                     <li><a href="quiz.html" target="_blank">Quiz</a></li>
@@ -49,6 +50,15 @@
 					state before and after, interpolation style, play direction and looping settings. Moreover, one animation
 					can be re-applied multiple times to many elements, so give it a try!
 				</p>
+				<p>
+					Animations have been applied to quiz page in a way that gives the impression of interactivity: each fieldset
+					responds to being hovered on by expanding in width, demanding user's focus and improving accessibility while
+					receiving input. This is done through the use of @keyframes and the pseudo-selector :hover.
+				</p>
+				<p class="citation">
+					W3schools. (2019). <span class="italic">CSS Animations.</span><br/>
+					<span class="indent"></span>https://www.w3schools.com/css/css3_animations.asp
+				</p>
 			</section>
 			<section class="parallax parallax-bg">
 				<h2>Parallax</h2>
@@ -73,6 +83,11 @@
 					<li>If the elements scale up bigger than the viewport, scrollbars will appear by default. To prevent this, add the
 						attributes {overflow-x: hidden} to the container.</li>
 				</ol>
+				<p class="citation">
+					Trigo, A. (2021, March 25). <span class="italic">How to create a parallax effect with CSS only.</span><br/>
+					<span class="indent"></span>Alvaro Trigo’s Blog - Web Developing and Design.<br/>
+					<span class="indent"></span>https://alvarotrigo.com/blog/how-to-create-a-parallax-effect-with-css-only/
+				</p>
 			</section>
 			<section class="parallax parallax-bg">
 				<h2>Accessibility</h2>
@@ -85,11 +100,20 @@
 					of the entire body and make changes to the variables within this scope. By storing all changeable color values as variables,
 					this simple switch can implement a drastic style change across the entire page with a simple click.
 				</p>
+				<p class="citation">
+					Morais, R. <span class="italic">Dark Mode without JavaScript.</span><br/>
+					<span class="indent"></span>https://codepen.io/rafaelsnts/pen/BEzZoX
+				</p>
 				<h3>But that's not all! Try toggling darkmode. Do the background images appear to be darker/lighter?</h3>
 				<p>
 					By applying the built-in function linear-gradient(), putting the opacity to 50% and passing the image in as a parameter, CSS automatically
 					generates a "shader" to cover over the image. Passing this entire function as a parameter to the color variable creates two corresponding
 					shaders to help aid in text visibility in both light and darkmode.
+				</p>
+				<p class="citation">
+					Trigo, A. (2021, March 25). <span class="italic">How to create a parallax effect with CSS only.</span><br/>
+					<span class="indent"></span>Alvaro Trigo’s Blog - Web Developing and Design.<br/>
+					<span class="indent"></span>https://alvarotrigo.com/blog/how-to-create-a-parallax-effect-with-css-only/
 				</p>
 			</section>
 		</main>
