--- a/assign1/index.html
+++ b/assign1/index.html
@@ -7,6 +7,7 @@
 		<meta name="author" content="Jack"/>
 		<meta name="viewport" content="width=device-width" initial-scale="1">
 		<link href="styles/style.css" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <title>Homepage</title>
     </head>
     <body>
@@ -15,8 +16,8 @@
 			<nav>
 				<ul>
 					<li id="toggler">
-						<label for="toggleMode" id="toggleDark">Dark Mode</label>
-						<label for="toggleMode" id="toggleLight">Light Mode</label>
+						<label for="toggleMode" id="toggleDark"><span class="material-icons md-32">toggle_off</span><span class="material-icons md-32">dark_mode</span></label>
+						<label for="toggleMode" id="toggleLight"><span class="material-icons md-32">toggle_on</span><span class="material-icons md-32">light_mode</span></label>
 					</li>
 					<li><a href="enhancements.html" target="_blank">Enhancements</a></li>
                     <li><a href="quiz.html" target="_blank">Quiz</a></li>
