--- a/assign1/quiz.html
+++ b/assign1/quiz.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-
 	<head>
-	
 		<meta charset="utf-8"/>
 		<meta name="description" content="APNG quiz"/>
 		<meta name="keywords" content="APNG, animated portable network graphics, quiz"/>
@@ -10,7 +8,7 @@
 		<meta name="viewport" content="width=device-width" initial-scale="1">
 		<title>APNG quiz</title>
 		<link href="styles/style.css" rel="stylesheet">
-		
+		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	</head>
 	
 	<body>
@@ -19,11 +17,10 @@
 		<header>
 			<nav>
 				<ul>
-					<li id="toggler">
-						
+					<li id="toggler">	
 						<!-- Dark mode toggler -->
-						<label for="toggleMode" id="toggleDark">Dark Mode</label>
-						<label for="toggleMode" id="toggleLight">Light Mode</label>
+						<label for="toggleMode" id="toggleDark"><span class="material-icons md-32">toggle_off</span><span class="material-icons md-32">dark_mode</span></label>
+						<label for="toggleMode" id="toggleLight"><span class="material-icons md-32">toggle_on</span><span class="material-icons md-32">light_mode</span></label>
 					</li>
 					<li><a href="enhancements.html" target="_blank">Enhancements</a></li>
                     <li><a href="quiz.html" target="_blank">Quiz</a></li>
@@ -41,123 +38,137 @@
 				<h2 id="subtitle">Test your knowledge by filling out these reinforcement questions!</h2>
 
 				<!-- Info -->
-				<fieldset class="bubble" id="info">
-					<div class="question">
-						<legend>Info</legend>
-						<div class="content">
-							<div>
-								<label for="first_name">First name:</label>
-								<input type="text" id="first_name" name="first_name" placeholder="First name..." required="required" pattern="[a-z A-Z]{2,20}">
-							</div>
-							<div>
-								<label for="last_name">Last name:</label>
-								<input type="text" id="last_name" name="last_name" placeholder="Last name..." required="required" pattern="[a-z A-Z]{2,20}">
-							</div>
-							<div>
-								<label for="student_id">Student ID:</label>
-								<input type="text" id="student_id" name="student_id" placeholder="Student ID..." required="required" pattern="\d{9}">
+				<section class="bubble" id="info">
+					<fieldset class="grow">
+						<div class="question">
+							<legend>Info</legend>
+							<div class="content">
+								<div>
+									<label for="first_name">First name:</label>
+									<input type="text" id="first_name" name="first_name" placeholder="First name..." required="required" pattern="[a-z A-Z]{2,20}">
+								</div>
+								<div>
+									<label for="last_name">Last name:</label>
+									<input type="text" id="last_name" name="last_name" placeholder="Last name..." required="required" pattern="[a-z A-Z]{2,20}">
+								</div>
+								<div>
+									<label for="student_id">Student ID:</label>
+									<input type="text" id="student_id" name="student_id" placeholder="Student ID..." required="required" pattern="\d{9}">
+								</div>
 							</div>
 						</div>
-					</div>
-				</fieldset>
+					</fieldset>
+				</section>
 
 				<!-- Text input question -->
-				<fieldset class="bubble" id="bubble1">
-					<div class="question">
-						<legend>Question 1</legend>
-						<div class="content">
-							<div>
-								<label for="question1">First option</label>
-								<input type="text" id="question1" name="answer1" placeholder="Your answer..." pattern="[a-z A-Z]{2,50}">
+				<section class="bubble" id="bubble1">
+					<fieldset class="grow">
+						<div class="question">
+							<legend>Question 1</legend>
+							<div class="content">
+								<div>
+									<label for="question1">First option</label>
+									<input type="text" id="question1" name="answer1" placeholder="Your answer..." pattern="[a-z A-Z]{2,50}">
+								</div>
 							</div>
 						</div>
-					</div>
-				</fieldset>
+					</fieldset>
+				</section>
 
 				<!-- Radio choice question -->
-				<fieldset class="bubble" id="bubble2">
-					<div class="question">
-						<legend>Question 2</legend>
-						<div class="content">
-							<div class="multiple-choice">
-								<input type="radio" id="first_choice" name="question2" value="Answer1">
-								<label for="first_choice">First option</label>
-							</div>
-							<div class="multiple-choice">
-								<input type="radio" id="second_choice" name="question2" value="Answer2">
-								<label for="second_choice">Second option</label>
-							</div>
-							<div class="multiple-choice">
-								<input type="radio" id="third_choice" name="question2" value="Answer3">
-								<label for="third_choice">Third option</label>
-							</div>
-							<div class="multiple-choice">
-								<input type="radio" id="fourth_choice" name="question2" value="Answer4">
-								<label for="fourth_choice">Fourth option</label>
+				<section class="bubble" id="bubble2">
+					<fieldset class="grow">
+						<div class="question">
+							<legend>Question 2</legend>
+							<div class="content">
+								<div class="multiple-choice">
+									<input type="radio" id="first_choice" name="question2" value="Answer1">
+									<label for="first_choice">First option</label>
+								</div>
+								<div class="multiple-choice">
+									<input type="radio" id="second_choice" name="question2" value="Answer2">
+									<label for="second_choice">Second option</label>
+								</div>
+								<div class="multiple-choice">
+									<input type="radio" id="third_choice" name="question2" value="Answer3">
+									<label for="third_choice">Third option</label>
+								</div>
+								<div class="multiple-choice">
+									<input type="radio" id="fourth_choice" name="question2" value="Answer4">
+									<label for="fourth_choice">Fourth option</label>
+								</div>
 							</div>
 						</div>
-					</div>
-				</fieldset>
+					</fieldset>
+				</section>
 
 				<!-- Checkbox question -->
-				<fieldset class="bubble" id="bubble3">
-					<div class="question">
-						<legend>Question 3</legend>
-						<div class="content">
-							<div class="multiple-choice">
-								<input type="checkbox" id="first_option" name="question3[]" value="Answer1">
-								<label for="first_option">First option</label>
-							</div>
-							<div class="multiple-choice">
-								<input type="checkbox" id="second_option" name="question3[]" value="Answer2">
-								<label for="second_option">Second option</label>
-							</div>
-							<div class="multiple-choice">
-								<input type="checkbox" id="third_option" name="question3[]" value="Answer3">
-								<label for="third_option">Third option</label>
-							</div>
-							<div class="multiple-choice">
-								<input type="checkbox" id="fourth_option" name="question3[]" value="Answer4">
-								<label for="fourth_option">Fourth option</label>
+				<section class="bubble" id="bubble3">
+					<fieldset class="grow">
+						<div class="question">
+							<legend>Question 3</legend>
+							<div class="content">
+								<div class="multiple-choice">
+									<input type="checkbox" id="first_option" name="question3[]" value="Answer1">
+									<label for="first_option">First option</label>
+								</div>
+								<div class="multiple-choice">
+									<input type="checkbox" id="second_option" name="question3[]" value="Answer2">
+									<label for="second_option">Second option</label>
+								</div>
+								<div class="multiple-choice">
+									<input type="checkbox" id="third_option" name="question3[]" value="Answer3">
+									<label for="third_option">Third option</label>
+								</div>
+								<div class="multiple-choice">
+									<input type="checkbox" id="fourth_option" name="question3[]" value="Answer4">
+									<label for="fourth_option">Fourth option</label>
+								</div>
 							</div>
 						</div>
-					</div>
-				</fieldset>
+					</fieldset>
+				</section>
 
 				<!-- Drop-down question -->
-				<fieldset class="bubble" id="bubble4">
-					<div class="question">
-						<legend>Question 4</legend>
-						<div class="content">
-							<div>
-								<label for="question4">Question:</label>
-								<select id="question4" name="choice">
-									<option value="first_option">First option</option>
-									<option value="second_option">Second option</option>
-									<option value="third_option">Third option</option>
-									<option value="fourth_option">Fourth option</option>
-								</select>
+				<section  class="bubble" id="bubble4">
+					<fieldset class="grow">
+						<div class="question">
+							<legend>Question 4</legend>
+							<div class="content">
+								<div>
+									<label for="question4">Question:</label>
+									<select id="question4" name="choice">
+										<option value="first_option">First option</option>
+										<option value="second_option">Second option</option>
+										<option value="third_option">Third option</option>
+										<option value="fourth_option">Fourth option</option>
+									</select>
+								</div>
 							</div>
 						</div>
-					</div>
-				</fieldset>
+					</fieldset>
+				</section>
 
 				<!-- Text area question -->
-				<fieldset class="bubble" id="bubble5">
-					<div class="question">
-						<legend>Question 5</legend>
-						<div class="content">
-							<label for="textarea">Question</label>
-							<textarea id="textarea" name="answer5" rows="10" cols="36" pattern="[a-z A-Z]{2,200}">Write your answer...</textarea>
+				<section class="bubble" id="bubble5">
+					<fieldset class="grow">
+						<div class="question">
+							<legend>Question 5</legend>
+							<div class="content">
+								<label for="textarea">Question</label>
+								<textarea id="textarea" name="answer5" rows="10" cols="40" pattern="[a-z A-Z]{2,200}">Write your answer...</textarea>
+							</div>
 						</div>
-					</div>
-				</fieldset>
+					</fieldset>
+				</section>
 
 				<!-- Submit button -->
 				<div class="bubble" id="submit-bubble">
-					<div class="content">
-						<label for="submit">How did I do?</label>
-						<input type="submit" id="submit"/>
+					<div class="grow">
+						<div class="content">
+							<label for="submit">How did I do?</label>
+							<input type="submit" id="submit"/>
+						</div>
 					</div>
 				</div>
 			</form>
