[C] - changed animations into transitions quiz
changed animations of expanding bubbles into transitions for auto forward/reverse interpolation

--- a/assign1/enhancements.html
+++ b/assign1/enhancements.html
@@ -39,10 +39,10 @@
 				</p>
 			</section>
 			<section class="parallax parallax-bg">
-				<h2>Animations</h2>
+				<h2>Animations/Transitions</h2>
 			</section>
 			<section class="no-parallax">
-				<h3>Most obviously, animations - as used on <a href="index.html#bg-container" target="_blank">homepage</a> and <a href="quiz.html#container" target="_blank">quiz</a>.</h3>
+				<h3>Most obviously, animations/transitions - as used on <a href="index.html#bg-container" target="_blank">homepage</a> and <a href="quiz.html#container" target="_blank">quiz</a>.</h3>
 				<p>
 					Using keyframes, animations in CSS is actually very simple. The transformation function will be applied
 					dynamically to the element's display, changing the element's attributes according to the pre-set parameters
@@ -51,13 +51,18 @@
 					can be re-applied multiple times to many elements, so give it a try!
 				</p>
 				<p>
-					Animations have been applied to quiz page in a way that gives the impression of interactivity: each fieldset
+					Transitions have been applied to quiz page in a way that gives the impression of interactivity: each fieldset
 					responds to being hovered on by expanding in width, demanding user's focus and improving accessibility while
-					receiving input. This is done through the use of @keyframes and the pseudo-selector :hover.
+					receiving input. This is done through the use of the pseudo-selector :hover and overriding the element's default
+					width. Interpolation between the two different rulesets is done automatically.
 				</p>
 				<p class="citation">
 					W3schools. (2019). <span class="italic">CSS Animations.</span><br/>
 					<span class="indent"></span>https://www.w3schools.com/css/css3_animations.asp
+				</p>
+				<p class="citation">
+					W3schools. (2019). <span class="italic">CSS Transitions.</span><br/>
+					<span class="indent"></span>https://www.w3schools.com/css/css3_transitions.asp
 				</p>
 			</section>
 			<section class="parallax parallax-bg">
