[D] - debugged viewport meta tag

--- a/assign1/enhancements.html
+++ b/assign1/enhancements.html
@@ -5,7 +5,7 @@
 		<meta name="description" content="enhancements"/>
 		<meta name="keywords" content="parallax, scrolling, darkmode, accessibility, animations"/>
 		<meta name="author" content="Aly"/>
-		<meta name="viewport" content="width=device-width" initial-scale="1">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>APNG enhancements</title>
 		<link href="styles/style.css" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
