--- a/assign1/index.html
+++ b/assign1/index.html
@@ -5,7 +5,7 @@
 		<meta name="description" content="APNG homepage"/>
 		<meta name="keywords" content="APNG, animated portable network graphics, homepage"/>
 		<meta name="author" content="Jack"/>
-		<meta name="viewport" content="width=device-width" initial-scale="1">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link href="styles/style.css" rel="stylesheet">
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <title>Homepage</title>
