--- a/assign1/topic.html
+++ b/assign1/topic.html
@@ -5,7 +5,7 @@
 		<meta name="description" content="APNG topic"/>
 		<meta name="keywords" content="APNG, animated portable network graphics, topic"/>
 		<meta name="author" content="Ravish"/>
-		<meta name="viewport" content="width=device-width" initial-scale="1">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>APNG topic</title>
 		<link href="styles/style.css" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
