Fixed Homepage Title

--- a/assign1/index.html
+++ b/assign1/index.html
@@ -8,7 +8,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link href="styles/style.css" rel="stylesheet">
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-        <title>Homepage</title>
+        <title>APNG Homepage</title>
     </head>
     <body>
         <input type="checkbox" id="toggleMode">
