Added Bouncy Ball Example To Index

--- a/assign1/index.html
+++ b/assign1/index.html
@@ -33,7 +33,9 @@
                 is a file format which originates from Portable Network Graphics (.PNG) 
                 but allows animated images that work similarly to animated .GIF files.
                 By exploring this website you learn more about the .APNG file type and how 
-                it's used.
+                it's used. 
+                <br>
+                <img src = "styles/images/bouncy.png" alt = "HTML Tutorial" height = "150" width = "140" />
             </p>
             <a href="topic.html" id="learn-more" target="_blank">Learn more</a>
         </main>
